current_errors_v5.txt
install
+- install neural-network-training
   +- compile exe neural-network-training Debug native 1 errors
examples\neural_network_training.zig:58:20: error: root source file struct 'std' has no member named 'rand'
    var prng = std.rand.DefaultPrng.init(std.crypto.random.int(u64));
                   ^~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\std.zig:1:1: note: struct declared here
pub const ArrayHashMap = array_hash_map.ArrayHashMap;
^~~
referenced by:
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\start.zig:714:37
    WinStartup: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib\std\start.zig:527:53
    2 reference(s) hidden; use '-freference-trace=4' to see all references
error: 1 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\examples\\neural_network_training.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name neural-network-training --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

Build Summary: 3/6 steps succeeded (1 failed)
install transitive failure
+- install neural-network-training transitive failure
   +- compile exe neural-network-training Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\e7d3b383645b36a759d62def9104e25e\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xc0ae238f -Za3d5174e3e768259
